# rusty-dungeons-and-dragons

./: .envrc  .gitignore  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
src/: main.rs  types.rs  ui.rs  websocket.rs
src/game/: character.rs  message.rs  mod.rs  settings.rs
src/server/: mod.rs  room.rs
src/ui/: characters.rs  lobby.rs  mod.rs  room.rs  utils.rs
templates/: page.html
templates/characters/: ability.html  character.html  characters.html
templates/room/: message.html  page.html  ws.html
templates/rooms/: room.html  rooms.html
