[package]
name = "rusty-dungeons-and-dragons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = { version = "0.6.20", features = ["ws", "headers"] }
futures = "0.3.29"
futures-util = { version = "0.3.29", features = ["sink", "std"], default-features = false }
headers = "0.3.9"
serde = { version = "1.0.191", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4"] }
